syntax = "proto3";

package pb;

// protoc --go_out=plugins:grpc:directory
option go_package = "./pb";

// following below are structured data

message Answer {
    int32 value = 1;
}

message OperationParameters {
    int32 a = 1;
    int32 b = 2;
}

// protoc --go_out=internal/adapters/framework/left/grpc --proto_path=internal/adapters/framework/left/grpc/proto internal/adapters/framework/left/grpc/proto/number_msg.proto    
